# violin-teacher

./: README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: api_messages.py  api_router.py  deps.py
app/api/endpoints/: auth.py  midi.py  practice_session.py  references.py  sheet_music.py  users.py
app/core/: config.py  database_session.py
app/core/security/: jwt.py  password.py
app/models/: enums.py  models.py
app/schemas/: requests.py  responses.py
migration/: env.py
migration/versions/: c1cc723b459a_add_all_tables.py
src/: __main__.py  config.py  database.py  models.py
src/auth/: models.py  schemas.py
